--- a/app/src/main/res/layout/deactivate_profile_dialog.xml
+++ b/app/src/main/res/layout/deactivate_profile_dialog.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:justificationMode="inter_word"
         android:layout_marginTop="@dimen/_10sdp"
-        android:text="Are you sure you want to deactivate your account? Deactivating your account will permanently delete your Oho! profile along with all you data. \n \nIf confirmed then tap the confirm button below."
+        android:text="Are you sure you want to deactivate your account? Deactivating your account will permanently delete your Oho! profile along with all your data. \n \nIf confirmed then tap the confirm button below."
         android:textColor="@color/black"
         android:textSize="@dimen/_16ssp"
         android:fontFamily="@font/sf_pro_rounded_regular" />
