Availability Settings ui added partially

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="indicatiorInactive2">#EEEEEE</color>
     <color name="bullets">#C4C4C4</color>
     <color name="divider">#E0E0E0</color>
+    <color name="deactivated_button_text">#C4C4C4</color>
 </resources>
