--- a/app/src/main/res/layout/activity_account_settings.xml
+++ b/app/src/main/res/layout/activity_account_settings.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".views.AccountSettingsActivity">
+    tools:context=".views.settings.AccountSettingsActivity">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
