--- a/app/src/main/res/layout/activity_faqactivity.xml
+++ b/app/src/main/res/layout/activity_faqactivity.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".views.FAQActivity">
+    tools:context=".views.settings.FAQActivity">
 
     <TextView
         android:layout_width="wrap_content"
