--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -14,7 +14,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Settings"
+        android:text="Settings &amp; Info"
         android:fontFamily="@font/sf_pro_rounded_medium"
         android:textColor="@color/black"
         android:textSize="@dimen/_40ssp"
@@ -31,7 +31,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="General"
+                android:text="User Settings"
                 android:textAllCaps="true"
                 android:fontFamily="@font/sf_pro_rounded_regular"
                 android:textColor="@color/indicatioractive"
@@ -54,7 +54,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/ic_bullets" />
+                    android:src="@drawable/ic_account_settings" />
 
                 <TextView
                     android:id="@+id/text_settings_1"
@@ -64,7 +64,7 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:layout_toEndOf="@id/image_bullet_1"
                     android:fontFamily="@font/sf_pro_rounded_regular"
-                    android:text="Account"
+                    android:text="Account Settings"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16ssp" />
 
@@ -87,25 +87,26 @@
                 android:id="@+id/button_preference_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <ImageView
                     android:id="@+id/image_bullet_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_bullets"
                     android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_preference_settings" />
 
                 <TextView
                     android:id="@+id/text_settings_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Preference"
-                    android:fontFamily="@font/sf_pro_rounded_regular"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_16ssp"
-                    android:layout_toEndOf="@id/image_bullet_2"
                     android:layout_centerVertical="true"
-                    android:layout_marginStart="@dimen/_10sdp"/>
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_toEndOf="@id/image_bullet_2"
+                    android:fontFamily="@font/sf_pro_rounded_regular"
+                    android:text="Preference Settings"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_16ssp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -123,17 +124,69 @@
                 android:layout_marginBottom="@dimen/_5sdp"/>
 
             <RelativeLayout
+                android:id="@+id/button_availability_settings"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/image_bullet_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_availability_settings" />
+
+                <TextView
+                    android:id="@+id/text_settings_4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_toEndOf="@id/image_bullet_4"
+                    android:fontFamily="@font/sf_pro_rounded_regular"
+                    android:text="Availability Setings"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_16ssp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_arrow_right"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"/>
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_1sdp"
+                android:background="@color/divider"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_5sdp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="App Information"
+                android:textAllCaps="true"
+                android:fontFamily="@font/sf_pro_rounded_regular"
+                android:textColor="@color/indicatioractive"
+                android:textSize="@dimen/_12ssp"
+                android:textStyle="bold"
+                android:layout_marginTop="@dimen/_25sdp"/>
+
+            <RelativeLayout
                 android:id="@+id/button_faq_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:focusable="true"
+                android:layout_marginTop="@dimen/_15sdp"
                 android:background="?attr/selectableItemBackground">
                 <ImageView
                     android:id="@+id/image_bullet_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_bullets"
+                    android:src="@drawable/ic_info"
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"/>
 
@@ -164,69 +217,19 @@
                 android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginBottom="@dimen/_5sdp"/>
 
-            <RelativeLayout
-                android:id="@+id/button_availability_settings"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:id="@+id/image_bullet_4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_bullets"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"/>
-
-                <TextView
-                    android:id="@+id/text_settings_4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_toEndOf="@id/image_bullet_4"
-                    android:fontFamily="@font/sf_pro_rounded_regular"
-                    android:text="Availability"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_16ssp" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_arrow_right"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"/>
-            </RelativeLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_1sdp"
-                android:background="@color/divider"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_5sdp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Other Settings"
-                android:textAllCaps="true"
-                android:fontFamily="@font/sf_pro_rounded_regular"
-                android:textColor="@color/indicatioractive"
-                android:textSize="@dimen/_12ssp"
-                android:textStyle="bold"
-                android:layout_marginTop="@dimen/_25sdp"/>
-
             <!-- Hel[p Center  -->
             <RelativeLayout
                 android:id="@+id/button_helpcenter_settings"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_15sdp">
+                android:layout_height="wrap_content">
+
                 <ImageView
                     android:id="@+id/image_bullet_5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_bullets"
                     android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_info" />
 
                 <TextView
                     android:id="@+id/text_settings_5"
@@ -263,13 +266,14 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:background="?attr/selectableItemBackground">
+
                 <ImageView
                     android:id="@+id/image_bullet_6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_bullets"
                     android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_info" />
 
                 <TextView
                     android:id="@+id/text_settings_6"
@@ -303,13 +307,14 @@
                 android:id="@+id/button_privacy_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <ImageView
                     android:id="@+id/image_bullet_7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_bullets"
                     android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_info" />
 
                 <TextView
                     android:id="@+id/text_settings_7"
@@ -346,13 +351,14 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:background="?attr/selectableItemBackground">
+
                 <ImageView
                     android:id="@+id/image_bullet_8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_bullets"
                     android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_info" />
 
                 <TextView
                     android:id="@+id/text_settings_8"
